[docs]: fix navlinks being off center

--- a/docs/src/theme/styles/layout.css
+++ b/docs/src/theme/styles/layout.css
@@ -109,10 +109,6 @@ body {
 	font-weight: bolder;
 }
 
-.sidebar ul ul {
-	margin-left: 1em;
-}
-
 .main {
 	padding-top: var(--topbar-height);
 	margin-left: var(--sidebar-width);
